# dlings

./: .editorconfig  .gitignore  README.md  dub.json  dub.selections.json  exercises.toml  meson.build
exercises/floating_point/: README.md  floating_point1.d  floating_point2.d  floating_point3.d  floating_point4.d
exercises/functions/: README.md  functions1.d  functions2.d  functions3.d  functions4.d  functions5.d
exercises/if/: README.md  if1.d  if2.d  if3.d
exercises/intro/: README.md  intro1.d  intro2.d
exercises/quiz/: quiz1.d
exercises/variables/: README.md  variables1.d  variables2.d  variables3.d  variables4.d
source/: app.d  info.d  meson.build  tutor.d  ui.d  util.d
